--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+nav{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 7.5vw;
+  height: 60px;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section.home{
+  padding: 0 7.5vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: calc(100vh-60px);
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
-.App-link {
-  color: #61dafb;
+.task-content{
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-container{
+  flex: 1;
+  padding: 0 8px;
+}
+
+.section-title{
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.section-description{
+  width: 400px;
+  /* font-weight: 500;
+  font-size: 16px; */
+  margin-bottom: 36px;
+}
+
+.task-container-title{
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.task-card{
+  padding: 16px;
+  background-color: white;
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
